--- a/final/CSS/01.css
+++ b/final/CSS/01.css
@@ -11,6 +11,7 @@
     padding: 0;
     text-decoration: none;
     list-style: none;
+    font-family: "微軟正黑體";
 }
 
 body {
@@ -20,8 +21,8 @@ body {
 nav {
     width: 100%;
     /*導覽列寬度*/
-    background: #9FBCBF;
-    height: 80px;
+    background: black;
+    height: 50px;
     /*導覽列高度*/
     position: fixed
 }
@@ -29,32 +30,39 @@ nav {
 nav ul {
     float: right;
     /*顯示在右邊*/
-    margin-right: 20px;
-    /*距離左邊邊界20px*/
+    margin-right: 10%;
+    /*邊界距離*/
 }
 
 nav ul li {
     display: inline-block;
     /*水平顯示標籤*/
-    line-height: 80px;
-    /*距離頂端80px*/
+    line-height: 50px;
+    /*距離頂端*/
     margin: 0px 30px;
     /*margin: 上 右 下 左
                         margin:  0 30 0 30(px)*/
+    font-weight: bolder;
 }
 
 nav ul li a {
-    color: #315259;
+    color: white;
     font-size: 18px;
 }
 
 label.logo {
-    color: #173440;
+    color: white;
     font-size: 30px;
-    line-height: 80px;
+    line-height: 45px;
     padding: 100px;
+    margin-left: 10%;
 }
 
 nav ul li a:hover {
     background: #65858C;
+}
+
+section img {
+    width: 80%;
+    margin-top: 50px;
 }
